fonts and images were added

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="8.css">
+    <link rel="stylesheet" href="./styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
         <header class="header">
           <div class="header__logo-text">
             <div class="header__logo">
-              <img src="/image/logo.png" alt="logo">
+              <img src="./img/logo.png" alt="logo">
             </div>
             <div class="header__text">
               Dr. Nikola Tesla 
@@ -35,7 +35,7 @@
             </ul>
           </nav>
           <div class="number">
-            <img src="/image/phone.svg" alt="phone">
+            <img src="./img/phone.svg" alt="phone">
             <span class="header__number">
               <a class="nav__link link2" href="#">099-999-99-99</a>
             </span>
@@ -91,7 +91,7 @@
                  <div class="block__text3">months service warranty</div>
              </div>
           <picture class="main__lady">
-          <img src="/image/lady.png" alt="lady">
+          <img src="./img/lady.png" alt="lady">
           </picture>
         </main>
    </div>
@@ -206,7 +206,7 @@
   <footer class="footer">
     <div class="footer__about">
         <div class="footer__about about">
-             <img class="about-logo" src="./image/tooth.png" alt="logo">
+             <img class="about-logo" src="./img/tooth.png" alt="logo">
              <span class="about-text">
                  <span class="dr">Dr. Nikola Tesla</span>
                  <span class="dentist">dentist</span>
@@ -242,23 +242,23 @@
       <p class="footer__contacts cont-text">339 5th Ave, New York</p>
       <br>
       <div class="footer__phone">
-          <img src="./image/phone.png" alt="img">
+          <img src="./img/phone.png" alt="img">
           <a class="footer__phone ph" href="#">(099) 237-44-62</a>
       </div>
       <br>
       <div class="footer__messengers">
-          <img class="footer__messengers messenger" src="./image/viber.png" alt="viber">
-          <img class="footer__messengers messenger" src="./image/telegram.png" alt="telegram">
-          <img class="footer__messengers messenger" src="./image/whatsapp.png" alt="whatsapp">
+          <img class="footer__messengers messenger" src="./img/viber.png" alt="viber">
+          <img class="footer__messengers messenger" src="./img/telegram.png" alt="telegram">
+          <img class="footer__messengers messenger" src="./img/whatsapp.png" alt="whatsapp">
       </div>
       <br>
       <div class="footer__instagram">
-          <img src="./image/instagram.png" alt="img">
+          <img src="./img/instagram.png" alt="img">
           <span class="footer__instagram inst">dr.NikTes</span>
       </div>
       <br>
       <div class="footer__mail">
-          <img src="./image/email.png" alt="img">
+          <img src="./img/email.png" alt="img">
           <span class="footer__mail email">dr.NikTes@gmail.com</span>
       </div>
       <br>
