pseudo elements edit 1

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 </head>
 <body>
      <div class="first_screen">
+        <picture class="main__lady">
+        <img class="img-lady" src="./img/lady.png" alt="lady">
+        </picture>
         <header class="header">
           <div class="header__logo-text">
             <div class="header__logo">
@@ -41,13 +44,13 @@
             </ul>
           </nav>
           <div class="number">
-            <img src="./img/phone.svg" alt="phone">
+            <!-- <img src="./img/phone.svg" alt="phone"> -->
             <span class="header__number">
               <a class="nav__link link2" href="#">+38 (099) 999-99-99</a>
             </span>
           </div>
           <div class="header__lang">
-            <span class="header__langUA">UA |</span>
+            <span class="header__langUA">UA </span>
             <span class="header__langEN"> EN</span>
           </div>
          </header>
@@ -86,9 +89,9 @@
           <br>
           <br>
 
-          <picture class="main__lady">
+          <!-- <picture class="main__lady">
           <img class="img-lady" src="./img/lady.png" alt="lady">
-          </picture>
+          </picture> -->
         </main>
         <div class="main__block">
           <div class="main__block block">
