pseudo elements edıt 2

--- a/index.html
+++ b/index.html
@@ -330,7 +330,11 @@
         <p class="footer__about about-nav">
             Services
         </p>
-        <p class="footer__about about-nav">UA | <b>EN</b></p>
+        <p class="footer__about about-nav-lang"> 
+          <span class="ua__lang">UA</span>
+          <span class="en__lang">EN</span>
+        </p> 
+
         <br>
         <div class="footer__about hours">
           <span><b>Working hours:</b></span>
@@ -346,7 +350,7 @@
       <p class="footer__contacts cont-text">Nikola Tesla</p>
       <p class="footer__contacts cont-text">339 5th Ave, New York</p>
       <div class="footer__phone">
-          <img src="./img/phone.png" alt="img">
+          <!-- <img src="./img/phone.png" alt="img"> -->
           <a class="footer__phone ph" href="#">+38 (099) 999-99-99</a>
       </div>
       <div class="footer__messengers">
@@ -355,11 +359,11 @@
           <img class="footer__messengers messenger" src="./img/whatsapp.png" alt="whatsapp">
       </div>
       <div class="footer__instagram">
-          <img src="./img/instagram.png" alt="img">
+          <!-- <img src="./img/instagram.png" alt="img"> -->
           <span class="footer__instagram inst">dr.NikTes</span>
       </div>
       <div class="footer__mail">
-          <img src="./img/email.png" alt="img">
+          <!-- <img src="./img/email.png" alt="img"> -->
           <span class="footer__mail email">dr.NikTes@gmail.com</span>
       </div>
       <span class="copyright">&#169 Copyright 2023</span>
