--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
             <span class="header__langUA">UA </span>
             <span class="header__langEN"> EN</span>
           </div>
+          <div class="burger">
+            <span class="span-burger"></span>
+         </div>
          </header>
         <main class="main container">
           <div class="main__text__layout">
@@ -63,9 +66,9 @@
              <div class="main__text2">
             Dental Treatment
              </div>
-          </div>
-          <div class="main__text3">
-            I will conduct a complete diagnosis of the oral cavity and build an individual treatment plan. Call and get a completely free consultation
+             <div class="main__text3">
+              I will conduct a complete diagnosis of the oral cavity and build an individual treatment plan. Call and get a completely free consultation
+            </div>
           </div>
 
           <br>
